--- a/config
+++ b/config
@@ -3,7 +3,7 @@
 root = "./"
 luaservice = root.."service/?.lua;"..root.."test/?.lua;"..root.."myproject/?.lua;"..root.."test/?/init.lua"
 lualoader = root .. "lualib/loader.lua"
-lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua"
+lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua;"..root.."myproject/?.lua"
 lua_cpath = root .. "luaclib/?.so;".."myproject/?.so"
 snax = root.."myproject/?.lua;"..root.."test/?.lua"
 --
